--- a/vcweb/core/templates/experimenter/registration-email.html
+++ b/vcweb/core/templates/experimenter/registration-email.html
@@ -1,9 +1,9 @@
-<h4>{{experiment.title}} registration</h4>
+<h4>{{experiment.display_name}} registration</h4>
 <p>
-You have been registered with the {{ experiment.title }} experiment.  You can set your password by visiting:
+You have been registered with the {{ experiment.display_name }} experiment.  You can set your password by visiting:
 </p>
 <ul>
-    <li>https://vcweb.asu.edu/accounts/password/reset?email={{ participant.email }}</li>
+    <li>https://vcweb.asu.edu/accounts/password/reset</li>
 </ul>
 <p>
 Your login email address is:
