fixes issue 66, added export functionality.
import is a bit trickier, punting on that for now

--HG--
rename : vcweb/core/templates/experimenter/registration-email.html => vcweb/core/templates/email/experiment-registration.html
rename : vcweb/core/templates/experimenter/registration-email.txt => vcweb/core/templates/email/experiment-registration.txt

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -165,12 +165,10 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
             model.resourceImageUrl = function() {
                 return "url('{{STATIC_URL}}images/forestry/pine-tree.png')";
             }
-            model.resourceImageWidth = function() {
+            model.resourceImageWidth = ko.computed(function() {
                 return model.resourcesToDisplay() * 30 + "px";
-            }
-            model.resourceImageHeight = function() {
-                return "79px";
-            }
+            });
+            model.resourceImageHeight = ko.observable("79px");
             model.submitDecision = function(data, evt) {
                 evt.preventDefault();
                 var formData = $('#vcweb-form').serialize();
