--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -113,7 +113,7 @@
         </p>
         {% endblock footer %}
         {% with jquery_version="1.8.3" %}
-        <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
+        <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
         {% endwith %}
         <script type='text/javascript' src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/jquery.cookie.js'></script>
