--- a/vcweb/core/templates/includes/jquery.ui.html
+++ b/vcweb/core/templates/includes/jquery.ui.html
@@ -1,4 +1,4 @@
-{% with jquery_ui_version="1.8.23" %}
-<link href="https://ajax.googleapis.com/ajax/libs/jqueryui/{{jquery_ui_version}}/themes/pepper-grinder/jquery-ui.css" rel="stylesheet" type="text/css" media="screen" />
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/{{jquery_ui_version}}/jquery-ui.min.js"></script>
+{% with jquery_ui_version="1.9.2" %}
+<link href="//ajax.googleapis.com/ajax/libs/jqueryui/{{jquery_ui_version}}/themes/pepper-grinder/jquery-ui.css" rel="stylesheet" type="text/css" media="screen" />
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/{{jquery_ui_version}}/jquery-ui.min.js"></script>
 {% endwith %}
