--- a/vcweb/core/templates/account/register.html
+++ b/vcweb/core/templates/account/register.html
@@ -10,20 +10,23 @@ Already have an account?  You can <a href='{% url core:login %}'>login here</a> 
 <div class='form-actions'>
     <button type='submit' class='btn btn-primary'>Submit</button>
 </div>
+<!--
     <br><br>
     You can also register or sign in using your other social accounts:
     <ul class="authbadges">
-        <!-- <li><a href="{% url socialauth_begin 'openid' %}">OpenID login</a></li> -->
+        <li><a href="{% url socialauth_begin 'openid' %}">OpenID login</a></li>
         <li><a href="{% url socialauth_begin 'twitter' %}"><img width="150", height="24" src="{{STATIC_URL}}images/oauth/sign-in-with-twitter_0.png"></a></li>
         <li><a href="{% url socialauth_begin 'foursquare' %}"><img src="{{STATIC_URL}}images/oauth/foursquare-connect-black.png"></a></li>
         <li><a href="{% url socialauth_begin 'facebook' %}"><img width="193", height="23" src="{{STATIC_URL}}images/oauth/facebook-connect-button.png"></a></li>
     </ul>
+-->
 {% endblock form %}
 {% block javascript %}
 {{ block.super }}
 <script type='text/javascript'>
 $(document).ready(function() {
 	$("#vcweb-form :input:visible:enabled:first").focus();
+    console.debug("about to validate form");
 	$('#vcweb-form').validate();
 	$('#id_password').rules("add", {
 		minlength: 3
@@ -35,16 +38,6 @@ $(document).ready(function() {
 			equalTo: "Please make sure your passwords match."
 		}
 	});
-        $('#vcweb-form').find('input:visible, textarea:visible').each(function(i, val) {
-            var labelTitle = $(val).prev().attr("title");
-            if (! labelTitle) {
-                return;
-            }
-            console.debug("creating popover with content " + labelTitle);
-            $(val).popover({ 
-                content: labelTitle,
-            });
-        });
 });
 </script>
 {% endblock %}
